--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blueprint-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://tgreen.github.io/blueprint-test",
   "dependencies": {
     "@blueprintjs/core": "^2.0.0-rc.2",
     "react": "^16.2.0",
@@ -13,9 +14,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
